fixed navbar alignment / fonts / colors

--- a/ClientApp/src/HomePage/components/SimulationDialog/simulationDialog.scss
+++ b/ClientApp/src/HomePage/components/SimulationDialog/simulationDialog.scss
@@ -27,7 +27,7 @@
 		padding: 1rem 0;
 		& .flexContainer {
 			padding-left: 20px;
-			padding-right: 20px;;
+			padding-right: 20px;
 		}
 		& .row {
 			margin-bottom: 10px;
